tests/integration/pilot/tunneling/gateway/tls-passthrough/virtual-service.tmpl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-route-via-egress-gateway
spec:
  hosts:
  - external-app.testdomain
  gateways:
  - mesh
  tls:
  - match:
    - port: 443
      sniHosts:
      - external-app.testdomain
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-route-via-external-forward-proxy
spec:
  hosts:
  - external-app.testdomain
  gateways:
  - istio-egressgateway
  tls:
  - match:
    - gateways:
      - istio-egressgateway
      port: 443
      sniHosts:
      - external-app.testdomain
    route:
    - destination:
        host: external-forward-proxy.testdomain
        subset: external-app-443
        port:
          number: {{ .port }}
